aarch64: Handle SVE attributes in comp_type_attributes [PR100270]

Even though "SVE type" and "SVE sizeless type" are marked as
affecting type identity, the middle end doesn't truly believe
it unless we also handle them in comp_type_attributes.

gcc/
	PR target/100270
	* config/aarch64/aarch64.c (aarch64_comp_type_attributes): Handle
	SVE attributes.

gcc/testsuite/
	PR target/100270
	* gcc.target/aarch64/sve/acle/general-c/pr100270_1.c: New test.
	* gcc.target/aarch64/sve/acle/general-c/sizeless-2.c: Change
	expected error message when subtracting pointers to different
	vector types.  Expect warnings when mixing them elsewhere.
	* gcc.target/aarch64/sve/acle/general/attributes_7.c: Remove
	XFAILs.  Tweak error messages for some cases.

(cherry picked from commit 4cea5b8cb715e40e10174e6de405f26202fa3d6a)